package io.lcalmsky.shop.domain;

import lombok.Getter;
import lombok.Setter;

import javax.persistence.*;

@Table(name = "DELIVERY")
@Entity
@Getter
@Setter
public class Delivery {
    @Id
    @GeneratedValue
    @Column(name = "delivery_id")
    private Long id;

    @OneToOne(mappedBy = "delivery")
    private Order order;

    @Embedded
    private Address address;

    @Enumerated(EnumType.STRING)
    private DeliveryStatus deliveryStatus;
}
